# 24-bit-Assembler

./: CMakeLists.txt  README.md  README.md.txt  assembler  assembler.c  assembler.h  base.h  first_pass.c  first_pass.h  lists.c  lists.h  makefile  second_pass.c  second_pass.h  symbolTable.c  symbolTable.h  test1.ob  textAnalyze.c  textAnalyze.h  writeFiles.c  writeFiles.h
